Stash to switch away from branch with half-baked test experiment work.